--- a/NeuralNetStudioExcelAddin/ClientApp/src/taskpane/taskpane.css
+++ b/NeuralNetStudioExcelAddin/ClientApp/src/taskpane/taskpane.css
@@ -15,7 +15,8 @@ body {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   /* overflow-y: auto; */
-  padding: 12px;
+  padding-right: 12px;
+  padding-left: 12px;
   position: absolute;
   width: 100%;
 }
@@ -23,6 +24,7 @@ body {
 .top {
   top: 0;
   position: absolute;
+  height: 30px;
 }
 
 .top-left {
@@ -49,7 +51,7 @@ body {
 
 .content {
   /* bottom: 30px; */
-  top: 10px;
+  top: 30px;
 }
 
 .header {
@@ -72,4 +74,9 @@ body {
 
 .center {
   text-align: center;
+}
+
+.welcome-progress {
+  width: 100%;
+  height: 100%;
 }
